--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "cookie-parser": "~1.4.3",
     "mongodb": "~2.2",
     "debug": "~2.2.0",
-    "uuid": "~2.0.3",
+    "uuid": ">2.0.3",
+    "util":">0.1",
     "unit.js": ">0.1",
+    "websocket":">0.1",
     "socket.io": "~1.4.5",
     "ejs": "~2.4.1",
     "express": "~4.13.4",
